--- a/portfolio.html
+++ b/portfolio.html
@@ -6,45 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия_ВМ</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
-      crossorigin="anonymous" 
-      referrerpolicy="no-referrer" 
-    />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+    />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" 
+    />
   </head>
   <body>
-    <header>
-      <a href="./index.html" class="logo"
+    <header class="heder">
+      <a href="./index.html" class="logo link"
         >Web<span class="accent-logo">Studio</span></a
       >
       <nav>
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li class="site-item">
-            <a href="./index.html" class="nav-link">Студия</a>
+            <a href="./index.html" class="nav-link link">Студия</a>
           </li>
           <li class="site-item">
-            <a href="./portfolio.html" class="nav-link current">Портфолио</a>
+            <a href="./portfolio.html" class="nav-link link current">Портфолио</a>
           </li>
-          <li class="site-item"><a href="" class="nav-link">Контакты</a></li>
+          <li class="site-item"><a href="" class="nav-link link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contacts-nav">
+      <ul class="contacts-nav list">
         <li>
-          <a href="mailto:info@devstudio.com" class="contacts-link"
+          <a href="mailto:info@devstudio.com" class="contacts-link link"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contacts-link"
+          <a href="tel:+380961111111" class="contacts-link link"
             >+38 096 111 11 11</a
           >
         </li>
@@ -70,7 +67,7 @@
             <button class="filter-button" type="button">Маркетинг</button>
           </li>
         </ul>
-        <ul class="projects">
+        <ul class="projects list">
           <li>
             <a href="" class="link">
             <img
@@ -183,23 +180,23 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo link"
         >Web<span class="accent-logo-footer">Studio</span></a
       >
       <address class="contacts">
-        <ul class="contacts-menu">
+        <ul class="contacts-menu list">
           <li class="contacts-item">
-            <a href="" class="contacts-link-map"
+            <a href="" class="contacts-link-map link"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li class="contacts-item">
-            <a href="mailto:info@example.com" class="contacts-link-f"
+            <a href="mailto:info@example.com" class="contacts-link-f link"
               >info@example.com</a
             >
           </li>
           <li class="contacts-item">
-            <a href="tel:+380961111111" class="contacts-link-f"
+            <a href="tel:+380961111111" class="contacts-link-f link"
               >+38 099 111 11 11</a
             >
           </li>
