--- a/portfolio.html
+++ b/portfolio.html
@@ -20,37 +20,40 @@
   </head>
   <body>
     <header class="heder">
+      <div class="heder-menu">
       <a href="./index.html" class="logo link"
         >Web<span class="accent-logo">Studio</span></a
       >
       <nav>
         <ul class="site-nav list">
-          <li class="site-item">
+          <li class="nav-item">
             <a href="./index.html" class="nav-link link">Студия</a>
           </li>
-          <li class="site-item">
+          <li class="nav-item">
             <a href="./portfolio.html" class="nav-link link current">Портфолио</a>
           </li>
-          <li class="site-item"><a href="" class="nav-link link">Контакты</a></li>
+          <li class="nav-item"><a href="" class="nav-link link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="contacts-nav list">
-        <li>
+        <li class="nav-item">
           <a href="mailto:info@devstudio.com" class="contacts-link link"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="nav-item">
           <a href="tel:+380961111111" class="contacts-link link"
             >+38 096 111 11 11</a
           >
         </li>
       </ul>
+    </div>
     </header>
     <main>
       <section>
+        <div class="portfolio-objects">
         <h1 class="visually-hidden">Наши проекты</h1>
-        <ul class="filter">
+        <ul class="filter list">
           <li class="filter-item">
             <button class="filter-button" type="button">Все</button>
           </li>
@@ -177,9 +180,11 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="page-footer">
+      <div class="footer-menu">
       <a href="./index.html" class="logo link"
         >Web<span class="accent-logo-footer">Studio</span></a
       >
@@ -202,6 +207,7 @@
           </li>
         </ul>
       </address>
+    </div>
     </footer>
   </body>
 </html>
