--- a/index.html
+++ b/index.html
@@ -11,38 +11,47 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
+      
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+          integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
+          crossorigin="anonymous" 
+          referrerpolicy="no-referrer" 
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" 
+    />
   </head>
   <body>
-    <header>
-      <a href="./index.html" class="logo"
+    <header class="heder">
+      <div class="heder-menu">
+      <a href="./index.html" class="logo link"
         >Web<span class="accent-logo">Studio</span></a
       >
       <nav>
-        <ul class="site-nav">
-          <li class="site-item">
-            <a href="./index.html" class="nav-link current">Студия</a>
+        <ul class="site-nav list">
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link link current">Студия</a>
           </li>
-          <li class="site-item">
-            <a href="./portfolio.html" class="nav-link">Портфолио</a>
+          <li class="nav-item">
+            <a href="./portfolio.html" class="nav-link link">Портфолио</a>
           </li>
-          <li class="site-item"><a href="" class="nav-link">Контакты</a></li>
+          <li class="nav-item"><a href="" class="nav-link link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contacts-nav">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts-link"
+      <ul class="contacts-nav list">
+        <li class="nav-item">
+          <a href="mailto:info@devstudio.com" class="nav-link contacts-color link"
             >info@devstudio.com</a
           >
         </li>
-        <li>
-          <a href="tel:+380961111111" class="contacts-link"
+        <li class="nav-item">
+          <a href="tel:+380961111111" class="nav-link contacts-color link"
             >+38 096 111 11 11</a
           >
         </li>
       </ul>
+    </div>
     </header>
     <main>
       <section class="hero">
@@ -158,28 +167,30 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="accent-logo-footer">Studio</span></a
-      >
-      <address class="contacts">
-        <ul class="contacts-menu">
-          <li class="contacts-item">
-            <a href="" class="contacts-link-map"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a href="mailto:info@example.com" class="contacts-link-f"
-              >info@example.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a href="tel:+380961111111" class="contacts-link-f"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="footer-menu">
+        <a href="./index.html" class="logo link"
+          >Web<span class="accent-logo-footer">Studio</span></a
+        >
+        <address class="contacts">
+          <ul class="contacts-menu list">
+            <li class="contacts-item">
+              <a href="" class="contacts-link-map link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a href="mailto:info@example.com" class="contacts-link-f link"
+                >info@example.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a href="tel:+380961111111" class="contacts-link-f link"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
