--- a/index.html
+++ b/index.html
@@ -55,36 +55,36 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
-      <section>
+      <section class="benefits">
         <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="benefits">
-          <li>
+        <ul class="benefits-list list">
+          <li class="benefits-item">
             <h3 class="benefits-title">Внимание к деталям</h3>
-            <p>
+            <p class="benefits-text">
               Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+              формированию позиции. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos atque corrupti incidunt natus, dolorum perferendis adipisci delectus voluptas. Dolorum amet consequatur a voluptatem saepe corrupti itaque pariatur laudantium ipsum? Harum.
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h3 class="benefits-title">Пунктуальность</h3>
-            <p>
+            <p class="benefits-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h3 class="benefits-title">Планирование</h3>
-            <p>
+            <p class="benefits-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="benefits-item">
             <h3 class="benefits-title">Современные технологии</h3>
-            <p>
+            <p class="benefits-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -93,7 +93,7 @@
       </section>
       <section>
         <h2 class="title-second">Чем мы занимаемся</h2>
-        <ul class="doing">
+        <ul class="doing-list list">
           <li>
             <img
               src="./img/keyboard.jpg"
@@ -122,7 +122,7 @@
       </section>
       <section>
         <h2 class="title-second">Наша команда</h2>
-        <ul class="team">
+        <ul class="team-list list">
           <li>
             <img
               src="./img/igor_demjanenko.jpg"
