--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <section class="benefits">
+        <div class="benefits-content">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="benefits-list list">
           <li class="benefits-item">
@@ -90,6 +91,7 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <section>
         <h2 class="title-second">Чем мы занимаемся</h2>
@@ -121,9 +123,10 @@
         </ul>
       </section>
       <section>
+      <div class="team-section">
         <h2 class="title-second">Наша команда</h2>
         <ul class="team-list list">
-          <li>
+          <li class="team-item">
             <img
               src="./img/igor_demjanenko.jpg"
               alt="фото Игоря Демьяненко"
@@ -133,7 +136,7 @@
             <h3 class="team-title">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./img/olga_repina.jpg"
               alt="фото Ольга Репина"
@@ -143,7 +146,7 @@
             <h3 class="team-title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./img/nikolaj_tarasov.jpg"
               alt="фото Николай Тарасов"
@@ -153,7 +156,7 @@
             <h3 class="team-title">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./img/mihail_ermak.jpg"
               alt="фото Михаил Ермаков"
@@ -164,6 +167,7 @@
             <p>UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <footer class="page-footer">
