устанавливает блочную систему

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <section class="benefits">
@@ -66,7 +66,7 @@
             <h3 class="benefits-title">Внимание к деталям</h3>
             <p class="benefits-text">
               Идейные соображения, а также начало повседневной работы по
-              формированию позиции. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos atque corrupti incidunt natus, dolorum perferendis adipisci delectus voluptas. Dolorum amet consequatur a voluptatem saepe corrupti itaque pariatur laudantium ipsum? Harum.
+              формированию позиции.
             </p>
           </li>
           <li class="benefits-item">
@@ -93,10 +93,11 @@
         </ul>
         </div>
       </section>
-      <section>
+      <section class="doing">
+        <div class="doing-content">
         <h2 class="title-second">Чем мы занимаемся</h2>
         <ul class="doing-list list">
-          <li>
+          <li class="doing-item">
             <img
               src="./img/keyboard.jpg"
               alt="верстаем сайт"
@@ -104,7 +105,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="doing-item">
             <img
               src="./img/smartphone.jpg"
               alt="оптимизируем под мобильные устройства"
@@ -112,7 +113,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="doing-item">
             <img
               src="./img/tablet.jpg"
               alt="красочно наполняем контент"
@@ -121,8 +122,9 @@
             />
           </li>
         </ul>
+      </div>
       </section>
-      <section>
+      <section class="team">
       <div class="team-section">
         <h2 class="title-second">Наша команда</h2>
         <ul class="team-list list">
@@ -133,8 +135,10 @@
               width="270"
               height="260"
             />
+            <div class="team-text-conteiner">
             <h3 class="team-title">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p class="team-text">Product Designer</p>
+            </div>
           </li>
           <li class="team-item">
             <img
@@ -143,8 +147,10 @@
               width="270"
               height="260"
             />
+            <div class="team-text-conteiner">
             <h3 class="team-title">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p class="team-text">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-item">
             <img
@@ -153,8 +159,10 @@
               width="270"
               height="260"
             />
+            <div class="team-text-conteiner">
             <h3 class="team-title">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p class="team-text">Marketing</p>
+            </div>
           </li>
           <li class="team-item">
             <img
@@ -163,8 +171,10 @@
               width="270"
               height="260"
             />
+            <div class="team-text-conteiner">
             <h3 class="team-title">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p class="team-text">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
