--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
     </div>
     </header>
     <main>
-      <section>
+      <section class="portfolio">
         <div class="portfolio-objects">
         <h1 class="visually-hidden">Наши проекты</h1>
         <ul class="filter list">
