--- a/portfolio.html
+++ b/portfolio.html
@@ -84,8 +84,10 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Технокряк</h2>
             <p class="text-portfolio">Веб-сайт</p>
+            </div>
           </a>
           </li>
           <li class="projects-item">
@@ -97,9 +99,11 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Постер New Orlean vs Golden Star</h2>
             <p class="text-portfolio">Дизайн</p>
-            </a>
+            </div>
+             </a>
           </li>
           <li class="projects-item">
             <a href="" class="project-link link">
@@ -110,8 +114,10 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Ресторан Seafood</h2>
             <p class="text-portfolio">Приложение</p>
+            </div>
             </a>
           </li>
           <li class="projects-item">
@@ -123,8 +129,10 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Проект Prime</h2>
             <p class="text-portfolio">Маркетинг</p>
+            </div>
             </a>
           </li>
           <li class="projects-item">
@@ -136,8 +144,10 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Проект Boxes</h2>
             <p class="text-portfolio">Приложение</p>
+            </div>
             </a>
           </li>
           <li class="projects-item">
@@ -149,8 +159,10 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Inspiration has no Borders</h2>
             <p class="text-portfolio">Веб-сайт</p>
+            </div>
             </a>
           </li>
           <li class="projects-item">
@@ -162,9 +174,11 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Издание Limited Edition</h2>
             <p class="text-portfolio">Дизайн</p>
-            </a>
+            </div>
+             </a>
           </li>
           <li class="projects-item">
             <a href="" class="project-link link">
@@ -175,8 +189,10 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Проект LAB</h2>
             <p class="text-portfolio">Маркетинг</p>
+            </div>
             </a>
           </li>
           <li class="projects-item">
@@ -188,8 +204,10 @@
               width="370"
               height="294"
             />
+            <div class="projects-text">
             <h2 class="title-portfolio">Growing Business</h2>
             <p class="text-portfolio">Приложение</p>
+            </div>
             </a>
           </li>
         </ul>
