--- a/index.html
+++ b/index.html
@@ -11,173 +11,177 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-      
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
-          integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
-          crossorigin="anonymous" 
-          referrerpolicy="no-referrer" 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" 
-    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="heder">
       <div class="heder-menu">
-      <a href="./index.html" class="logo link"
-        >Web<span class="accent-logo">Studio</span></a
-      >
-      <nav>
-        <ul class="site-nav list">
+        <a href="./index.html" class="logo link"
+          >Web<span class="accent-logo">Studio</span></a
+        >
+        <nav>
+          <ul class="site-nav list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link link current">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link link">Портфолио</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts-nav list">
           <li class="nav-item">
-            <a href="./index.html" class="nav-link link current">Студия</a>
+            <a
+              href="mailto:info@devstudio.com"
+              class="nav-link contacts-color link"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="nav-item">
-            <a href="./portfolio.html" class="nav-link link">Портфолио</a>
+            <a href="tel:+380961111111" class="nav-link contacts-color link"
+              >+38 096 111 11 11</a
+            >
           </li>
-          <li class="nav-item"><a href="" class="nav-link link">Контакты</a></li>
         </ul>
-      </nav>
-      <ul class="contacts-nav list">
-        <li class="nav-item">
-          <a href="mailto:info@devstudio.com" class="nav-link contacts-color link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="nav-item">
-          <a href="tel:+380961111111" class="nav-link contacts-color link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
-    </div>
+      </div>
     </header>
     <main>
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
-      <section class="benefits">
-        <div class="benefits-content">
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="benefits-list list">
-          <li class="benefits-item">
-            <h3 class="benefits-title">Внимание к деталям</h3>
-            <p class="benefits-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-title">Пунктуальность</h3>
-            <p class="benefits-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-title">Планирование</h3>
-            <p class="benefits-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-title">Современные технологии</h3>
-            <p class="benefits-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="benefits section">
+        <div class="benefits-content container">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul class="benefits-list list">
+            <li class="benefits-item">
+              <h3 class="benefits-title">Внимание к деталям</h3>
+              <p class="benefits-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Пунктуальность</h3>
+              <p class="benefits-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Планирование</h3>
+              <p class="benefits-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Современные технологии</h3>
+              <p class="benefits-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
-      <section class="doing">
-        <div class="doing-content">
-        <h2 class="title-second">Чем мы занимаемся</h2>
-        <ul class="doing-list list">
-          <li class="doing-item">
-            <img
-              src="./img/keyboard.jpg"
-              alt="верстаем сайт"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./img/smartphone.jpg"
-              alt="оптимизируем под мобильные устройства"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./img/tablet.jpg"
-              alt="красочно наполняем контент"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
-      </div>
+      <section class="doing section">
+        <div class="doing-content container">
+          <h2 class="title-second">Чем мы занимаемся</h2>
+          <ul class="doing-list list">
+            <li class="doing-item">
+              <img
+                src="./img/keyboard.jpg"
+                alt="верстаем сайт"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./img/smartphone.jpg"
+                alt="оптимизируем под мобильные устройства"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./img/tablet.jpg"
+                alt="красочно наполняем контент"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="team">
-      <div class="team-section">
-        <h2 class="title-second">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./img/igor_demjanenko.jpg"
-              alt="фото Игоря Демьяненко"
-              width="270"
-              height="260"
-            />
-            <div class="team-text-conteiner">
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p class="team-text">Product Designer</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img
-              src="./img/olga_repina.jpg"
-              alt="фото Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <div class="team-text-conteiner">
-            <h3 class="team-title">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img
-              src="./img/nikolaj_tarasov.jpg"
-              alt="фото Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <div class="team-text-conteiner">
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p class="team-text">Marketing</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img
-              src="./img/mihail_ermak.jpg"
-              alt="фото Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <div class="team-text-conteiner">
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+      <section class="team section">
+        <div class="team-section container">
+          <h2 class="title-second">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./img/igor_demjanenko.jpg"
+                alt="фото Игоря Демьяненко"
+                width="270"
+                height="260"
+              />
+              <div class="team-text-conteiner">
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./img/olga_repina.jpg"
+                alt="фото Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <div class="team-text-conteiner">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./img/nikolaj_tarasov.jpg"
+                alt="фото Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <div class="team-text-conteiner">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./img/mihail_ermak.jpg"
+                alt="фото Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <div class="team-text-conteiner">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
