удаляет все лишнее

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -23,34 +24,32 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="heder">
-      <div class="heder-menu">
-        <a href="./index.html" class="logo link"
+    <header class="header">
+      <div class="header-menu container">
+        <a href="./index.html" class="logo"
           >Web<span class="accent-logo">Studio</span></a
         >
         <nav>
-          <ul class="site-nav list">
+          <ul class="site-nav">
             <li class="nav-item">
-              <a href="./index.html" class="nav-link link current">Студия</a>
+              <a href="./index.html" class="nav-link current">Студия</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link link">Портфолио</a>
+              <a href="./portfolio.html" class="nav-link">Портфолио</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link link">Контакты</a>
+              <a href="" class="nav-link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="contacts-nav list">
+        <ul class="contacts-nav">
           <li class="nav-item">
-            <a
-              href="mailto:info@devstudio.com"
-              class="nav-link contacts-color link"
+            <a href="mailto:info@devstudio.com" class="nav-link contacts-color"
               >info@devstudio.com</a
             >
           </li>
           <li class="nav-item">
-            <a href="tel:+380961111111" class="nav-link contacts-color link"
+            <a href="tel:+380961111111" class="nav-link contacts-color"
               >+38 096 111 11 11</a
             >
           </li>
@@ -62,10 +61,10 @@
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
-      <section class="benefits section">
-        <div class="benefits-content container">
+      <section class="section">
+        <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
-          <ul class="benefits-list list">
+          <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-title">Внимание к деталям</h3>
               <p class="benefits-text">
@@ -98,9 +97,9 @@
         </div>
       </section>
       <section class="doing section">
-        <div class="doing-content container">
+        <div class="container">
           <h2 class="title-second">Чем мы занимаемся</h2>
-          <ul class="doing-list list">
+          <ul class="doing-list">
             <li class="doing-item">
               <img
                 src="./img/keyboard.jpg"
@@ -129,9 +128,9 @@
         </div>
       </section>
       <section class="team section">
-        <div class="team-section container">
+        <div class="container">
           <h2 class="title-second">Наша команда</h2>
-          <ul class="team-list list">
+          <ul class="team-list">
             <li class="team-item">
               <img
                 src="./img/igor_demjanenko.jpg"
@@ -185,24 +184,24 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="footer-menu">
-        <a href="./index.html" class="logo link"
+      <div class="container">
+        <a href="./index.html" class="logo footer-logo"
           >Web<span class="accent-logo-footer">Studio</span></a
         >
         <address class="contacts">
-          <ul class="contacts-menu list">
+          <ul class="contacts-list">
             <li class="contacts-item">
-              <a href="" class="contacts-link-map link"
+              <a href="" class="contacts-link-map"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
             <li class="contacts-item">
-              <a href="mailto:info@example.com" class="contacts-link-f link"
+              <a href="mailto:info@example.com" class="contacts-link-f"
                 >info@example.com</a
               >
             </li>
             <li class="contacts-item">
-              <a href="tel:+380961111111" class="contacts-link-f link"
+              <a href="tel:+380961111111" class="contacts-link-f"
                 >+38 099 111 11 11</a
               >
             </li>
