--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -23,36 +24,32 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="heder">
-      <div class="heder-menu">
-        <a href="./index.html" class="logo link"
+    <header class="header">
+      <div class="header-menu container">
+        <a href="./index.html" class="logo"
           >Web<span class="accent-logo">Studio</span></a
         >
         <nav>
-          <ul class="site-nav list">
+          <ul class="site-nav">
             <li class="nav-item">
-              <a href="./index.html" class="nav-link link">Студия</a>
+              <a href="./index.html" class="nav-link">Студия</a>
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link link current"
-                >Портфолио</a
-              >
+              <a href="./portfolio.html" class="nav-link current">Портфолио</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link link">Контакты</a>
+              <a href="" class="nav-link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="contacts-nav list">
+        <ul class="contacts-nav">
           <li class="nav-item">
-            <a
-              href="mailto:info@devstudio.com"
-              class="nav-link contacts-color link"
+            <a href="mailto:info@devstudio.com" class="nav-link contacts-color"
               >info@devstudio.com</a
             >
           </li>
           <li class="nav-item">
-            <a href="tel:+380961111111" class="nav-link contacts-color link"
+            <a href="tel:+380961111111" class="nav-link contacts-color"
               >+38 096 111 11 11</a
             >
           </li>
@@ -60,10 +57,10 @@
       </div>
     </header>
     <main>
-      <section class="portfolio section">
-        <div class="portfolio-objects container">
+      <section class="section">
+        <div class="container">
           <h1 class="visually-hidden">Наши проекты</h1>
-          <ul class="filter list">
+          <ul class="filter">
             <li class="filter-item">
               <button class="filter-button" type="button">Все</button>
             </li>
@@ -80,9 +77,9 @@
               <button class="filter-button" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="projects list">
+          <ul class="projects-list">
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/tehnokrak.jpg"
                   alt="Технокряк"
@@ -97,7 +94,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/poster-new-orlean.jpg"
                   alt="Постер"
@@ -114,7 +111,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/restoran-seafood.jpg"
                   alt="Ресторан"
@@ -129,7 +126,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/project-prime.jpg"
                   alt="Наушники"
@@ -144,7 +141,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/project-boxes.jpg"
                   alt="Коробки"
@@ -159,7 +156,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/inspiration.jpg"
                   alt="Вдохновения без границ"
@@ -174,7 +171,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/izdanie-limitet.jpg"
                   alt="Лимитированое издание"
@@ -189,7 +186,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/project-lab.jpg"
                   alt="Проект Лаб"
@@ -204,7 +201,7 @@
               </a>
             </li>
             <li class="projects-item">
-              <a href="" class="project-link link">
+              <a href="" class="project-link">
                 <img
                   src="./img/portfolio/growing-business.jpg"
                   alt="Растущий бизнес"
@@ -223,24 +220,24 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="footer-menu">
-        <a href="./index.html" class="logo link"
+      <div class="container">
+        <a href="./index.html" class="logo footer-logo"
           >Web<span class="accent-logo-footer">Studio</span></a
         >
         <address class="contacts">
-          <ul class="contacts-menu list">
+          <ul class="contacts-list">
             <li class="contacts-item">
-              <a href="" class="contacts-link-map link"
+              <a href="" class="contacts-link-map"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
             <li class="contacts-item">
-              <a href="mailto:info@example.com" class="contacts-link-f link"
+              <a href="mailto:info@example.com" class="contacts-link-f"
                 >info@example.com</a
               >
             </li>
             <li class="contacts-item">
-              <a href="tel:+380961111111" class="contacts-link-f link"
+              <a href="tel:+380961111111" class="contacts-link-f"
                 >+38 099 111 11 11</a
               >
             </li>
